@@ -1,4 +1,4 @@
-.TH nget 1 "23 Sep 2001"
+.TH nget 1 "03 Oct 2001"
 .SH NAME
 nget \- retrieve files from NNTP hosts
 .SH SYNOPSIS
@@ -128,7 +128,7 @@ Integral: limit, tries, debug, delay, usegz(-1=default, 0=uncompressed, 1-9=gzip
 .br
 Float: curservmult
 .br
-Boolean(0/1): case, complete, dupeidcheck, dupefilecheck, quiet, tempshortnames
+Boolean(0/1): case, complete, dupeidcheck, dupefilecheck, quiet, tempshortnames, unequal_line_error
 .br
 yes/no/ask: makedirs
 .P
