@@ -87,16 +87,17 @@ class c_prot_nntp /*: public c_transfer_protocol */{
 		void doxover(ulong low, ulong high);
 		void doxover(c_nrange *r);
 //		void nntp_queueretrieve(const char *match, ulong linelimit, int getflags);
-		void nntp_retrieve(int options, const string &writelite);
+		void nntp_retrieve(const nget_options &options);
 		void nntp_print_retrieving_headers(ulong lll,ulong hhh,ulong ccc,ulong bbb);
 //		void nntp_print_retrieving_articles(long nnn, long tot,long done,long btot,long bbb);
 //		void nntp_print_retrieving_articles(arinfo *ari, arinfo*tot);
-		void nntp_group(c_group_info::ptr group, int getheaders, nget_options &options);
+		void nntp_group(c_group_info::ptr group, int getheaders, const nget_options &options);
 		void nntp_dogroup(int getheaders);
 		//void nntp_doarticle(long num,long ltotal,long btotal,char *fn);
 		int nntp_doarticle_prioritize(c_nntp_part *part,t_nntp_server_articles_prioritized &sap,t_nntp_server_articles_prioritized::iterator *curservsapi);
 		int nntp_dowritelite_article(c_file &fw,c_nntp_part *part,char *fn);
-		int nntp_doarticle(c_nntp_part*part,arinfo*ari,quinfo*toti,char *fn);
+		int nntp_doarticle(c_nntp_part*part,arinfo*ari,quinfo*toti,char *fn, const nget_options &options);
+		void nntp_dogetarticle(arinfo*ari,quinfo*toti,list<string> &buf);
 		void nntp_auth(void);
 		void nntp_doauth(const char *user, const char *pass);
 		//void nntp_open(const char *h,const char *u,const char *p);
