@@ -9,6 +9,8 @@
   * Add messageid (mid) keyword to -R expressions.
   * Add more documentation of win32 build/usage, and win32 binaries zip.
   * Error on retrieving headers will retry and try other servers instead of giving up.
+  * Errors other than "article not available" on retrieving articles are handled correctly.
+  * Added unequal_line_error config option and made default be a warning rather than an error. (since the "unequal line count" error was more of an annoyance than anything.
   
 2001-08-02 - v0.14:
   * Fix exception if files in current dir contained '{' or '}'. (reported by Brian Keefer)
